--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
+  "version": 2,
   "framework": "vite",
+  "public": true,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "routes": [
@@ -12,7 +14,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/index.html"
     }
   ]
 } 
